# mcps

tts-mcp/: .gitignore  CLAUDE_CODE_INTEGRATION.md  README.md  claude_mcp_config.json  pyproject.toml  test_integration.py  test_simple.py  tts_mcp.py  tts_mcp_debug.py
tts-mcp/tts_mcp/: __init__.py  __main__.py  audio_player.py  audio_processor.py  cli.py  server.py  tts_engine.py  voices.py
