[project]
name = "tts-mcp"
version = "0.1.0"
description = "MCP server for Text-to-Speech service integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "kittentts>=0.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
tts-mcp = "tts_mcp.server:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"