[project]
name = "tts-mcp"
version = "0.1.0"
description = "MCP server for Text-to-Speech service integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kittentts>=0.1.3",
    "mcp==1.13.1",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
]

[project.scripts]
tts-mcp = "tts_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
