[project]
name = "tts-mcp"
version = "0.1.0"
description = "MCP server for Text-to-Speech service integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.13.1",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.1/kittentts-0.1.0-py3-none-any.whl",
]

[project.scripts]
tts-mcp = "tts_mcp.cli:main"

[tool.uv]
package = true
